# playground

./: .gitignore  Cargo.toml  config.json  docker-compose.yml  schema.sql
src/: main.rs
src/common/: error.rs
src/config/: config.rs  database.rs
src/handlers/: auth.rs  mod.rs  state.rs  user.rs  utils.rs
src/repositories/: user.rs
src/services/: auth.rs  jwt.rs  user.rs
