[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.190", features = ["derive"] }
bcrypt = "0.15.0"
tower = "0.4.13"
tower-http = "0.5.1"
jsonwebtoken = "9.1.0"
rocksdb = "0.21.0"
sled = "0.34.7"
