[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
bcrypt = "0.15.1"
tower = "0.5.0"
tower-http = { version = "0.6.1", features = ["cors"] }
jsonwebtoken = "9.3.0"
deadpool-postgres = "0.14.0"
uuid = { version = "1.10.0", features = ["v4"] }
lazy_static = "1.5.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] } 
tokio-postgres = "0.7.12"
